--- a/website/docs/quick-start.mdx
+++ b/website/docs/quick-start.mdx
@@ -4,6 +4,8 @@ title: 快速上手
 sidebar_label: 快速上手
 ---
 
+import QuickStartExample from '@site/src/components/QuickStartExample'
+
 ## 安装
 
 安装核心包：
@@ -58,3 +60,5 @@ export default () => {
   return <EntityForm entity={User}></EntityForm>
 }
 ```
+
+<QuickStartExample />
